# AppLauncher

./: .clang-format  .codespellignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CTKAppLauncherCPack.cmake  CTKAppLauncherSettings.ini.in  CTestConfig.cmake  Dockerfile  Main.cpp  README.md  appveyor.yml  circle.yml  ctkExport.h.in  docker-build-package.sh  linux-static-configure.cmake  msvc-static-configure.cmake
Base/: CMakeLists.txt  ctkAppArguments.cpp  ctkAppArguments.h  ctkAppLauncher.cpp  ctkAppLauncher.h  ctkAppLauncherCommandLineParser.cpp  ctkAppLauncherCommandLineParser.h  ctkAppLauncherEnvironment.cpp  ctkAppLauncherEnvironment.h  ctkAppLauncherSettings.cpp  ctkAppLauncherSettings.h  ctkAppLauncherSettings_p.h  ctkAppLauncher_p.h  ctkCommandLineParser.cpp  ctkCommandLineParser.h  ctkSettingsHelper.cpp  ctkSettingsHelper.h  ctkTest.h
Base/Resources/: CTKAppLauncherBase.qrc
Docs/: CMakeLists.txt  Doxyfile.txt.in
Testing/: CMakeLists.txt
Testing/CMake/: App4ConfigureLauncherTest-BuildStep.cmake  App4ConfigureLauncherTest-ConfigureStep.cmake  App4ConfigureLauncherTest-expected-buildtree-settings.cmake.in  App4ConfigureLauncherTest-expected-common-settings.cmake.in  App4ConfigureLauncherTest-expected-installtree-settings.cmake.in  App4ConfigureLauncherTestLauncherSettings.ini.expected.in  App4ConfigureLauncherTestLauncherSettingsToInstall.ini.expected.in  App4ConfigureLauncherTestStepPrerequisites.cmake.in  App4Test-BuildStep.cmake  App4Test-TestRPATHDisabled.cmake  App4TestStepPrerequisites.cmake.in  AppLauncher-Install.cmake  AppLauncher-Param-TestLauncherAdditionalSettings.cmake  AppLauncher-Param-TestLauncherDetach.cmake  AppLauncher-Param-TestLauncherDumpEnvironment.cmake  AppLauncher-Param-TestLauncherHelp.cmake  AppLauncher-Param-TestLauncherIgnoreUserAdditionalSettings.cmake  AppLauncher-Param-TestLauncherLaunch-SearchPATH-WithLauncherExpression.cmake  AppLauncher-Param-TestLauncherLaunch-WithArguments.cmake  AppLauncher-Param-TestLauncherLaunch-WithoutValue.cmake  AppLauncher-Param-TestLauncherNoSplash.cmake  AppLauncher-Param-TestLauncherTimeout.cmake  AppLauncher-Param-TestLauncherVerbose.cmake  AppLauncher-Param-TestLauncherVersion.cmake  AppLauncher-Param-TestQtReservedArgs.cmake  AppLauncher-Settings-TestApplicationArguments.cmake  AppLauncher-Settings-TestApplicationPath-Invalid.cmake  AppLauncher-Settings-TestApplicationPath-WithArgumentsAsParam.cmake  AppLauncher-Settings-TestApplicationPath-Without.cmake  AppLauncher-Settings-TestEnvironment-NotFound.cmake  AppLauncher-Settings-TestEnvironment.cmake  AppLauncher-Settings-TestExtraApp-IgnoreHelp.cmake  AppLauncher-Settings-TestExtraAppLongArg-WithParams.cmake  AppLauncher-Settings-TestExtraAppLongArg.cmake  AppLauncher-Settings-TestHelpLongArg.cmake  AppLauncher-Settings-TestHelpShortArg.cmake  AppLauncher-Settings-TestLauncherAdditionalSettings-FileBaseName.cmake  AppLauncher-Settings-TestLauncherAdditionalSettings-WithoutRevision.cmake  AppLauncher-Settings-TestLauncherAdditionalSettings.cmake  AppLauncher-Settings-TestPATH.cmake  (+13 more)
Testing/Cpp/: App4TestBuildStep.cmake  App4TestConfigureStep.cmake  AppLauncherTest1.cmake  AppLauncherTest1.cmake.in  AppLauncherTest1Prerequisites.cmake.in  AppLauncherTest2.cmake  AppLauncherTest2.cmake.in  AppLauncherTest3.cmake  AppLauncherTest3.cmake.in  AppLauncherTest4.cmake  AppLauncherTest4.cmake.in  AppLauncherTest5.cmake  AppLauncherTest5.cmake.in  AppLauncherTest6.cmake  AppLauncherTest7.cmake  AppLauncherTest8.cmake  AppLauncherTestLaunchExecutableInPath.cmake  AppLauncherTestLauncherDetach.cmake  AppLauncherTestMacros.cmake  AppLauncherTestNoSplashScreen.cmake  AppLauncherTestPrerequisites.cmake.in  CMakeLists.txt
Testing/Docker/: Dockerfile
Testing/Launcher/: App4ConfigureLauncherTest-ConfigureStep.cmake  App4ConfigureLauncherTest-expected-build-settings.cmake.in  App4ConfigureLauncherTest-expected-buildtree-settings.cmake.in  App4ConfigureLauncherTest-expected-common-settings.cmake.in  App4ConfigureLauncherTest-expected-install-settings.cmake.in  App4ConfigureLauncherTest-expected-installtree-settings.cmake.in  App4ConfigureLauncherTestLauncherSettings.ini.expected.in  App4ConfigureLauncherTestLauncherSettingsToInstall.ini.expected.in  App4ConfigureLauncherTestStepPrerequisites.cmake.in  App4Test-ConfigureStep.cmake  App4Test-TestRPATHDisabled.cmake  App4TestStepChecks.cmake  App4TestStepPrerequisites.cmake.in  AppLauncher-Param-TestLauncherAdditionalSettings.cmake  AppLauncher-Param-TestLauncherAdditionalSettingsExcludeGroups.cmake  AppLauncher-Param-TestLauncherDumpEnvironment.cmake  AppLauncher-Param-TestLauncherGenerateTemplate.cmake  AppLauncher-Param-TestLauncherHelp.cmake  AppLauncher-Param-TestLauncherIgnoreUserAdditionalSettings.cmake  AppLauncher-Param-TestLauncherLaunch-SearchPATH-WithLauncherExpression.cmake  AppLauncher-Param-TestLauncherLaunch-SearchPATH.cmake  AppLauncher-Param-TestLauncherLaunch-WithArguments.cmake  AppLauncher-Param-TestLauncherLaunch-WithoutValue.cmake  AppLauncher-Param-TestLauncherLoadEnvironment.cmake  AppLauncher-Param-TestLauncherLoadEnvironmentLevel0.cmake  AppLauncher-Param-TestLauncherLoadEnvironmentLevel1.cmake  AppLauncher-Param-TestLauncherTimeout.cmake  AppLauncher-Param-TestLauncherVerbose.cmake  AppLauncher-Param-TestLauncherVersion.cmake  AppLauncher-Param-TestQtReservedArgs.cmake  AppLauncher-ScriptMode-FindPackage.cmake  AppLauncher-Settings-TestApplicationArguments.cmake  AppLauncher-Settings-TestApplicationPath-Invalid.cmake  AppLauncher-Settings-TestApplicationPath-WithArgumentsAsParam.cmake  AppLauncher-Settings-TestApplicationPath-Without.cmake  AppLauncher-Settings-TestApplicationPath.cmake  AppLauncher-Settings-TestEnvironment-Deprecated-GeneralAdditionalPathVariables.cmake  AppLauncher-Settings-TestEnvironment-NotFound.cmake  AppLauncher-Settings-TestExtraApp-IgnoreHelp.cmake  AppLauncher-Settings-TestExtraAppLongArg.cmake  (+33 more)
Testing/LauncherLib/: AppWithLauncherLib-BuildStep.cmake  AppWithLauncherLib-ConfigureStep.cmake  AppWithLauncherLib-Install.cmake  (+3 more)
(+56 files in other folders)
